[package]
name = "altasbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["env", "derive","cargo"] }
clap_complete = "4.2.0"
matrix-sdk = {version = "0.6.2", features = ["anyhow", "markdown"]}
